--- a/LinguaTest/LinguaTest.csproj
+++ b/LinguaTest/LinguaTest.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Word.cs" />
     <EmbeddedResource Include="CreateTestWindow.resx">
       <DependentUpon>CreateTestWindow.cs</DependentUpon>
     </EmbeddedResource>
