--- a/LinguaTest/LinguaTest.csproj
+++ b/LinguaTest/LinguaTest.csproj
@@ -48,11 +48,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateTestWindow.cs">
+    <Compile Include="AddNewWordWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CreateTestWindow.Designer.cs">
-      <DependentUpon>CreateTestWindow.cs</DependentUpon>
+    <Compile Include="AddNewWordWindow.Designer.cs">
+      <DependentUpon>AddNewWordWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateOrEditTestWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateOrEditTestWindow.Designer.cs">
+      <DependentUpon>CreateOrEditTestWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
@@ -63,8 +69,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WordObject.cs" />
-    <EmbeddedResource Include="CreateTestWindow.resx">
-      <DependentUpon>CreateTestWindow.cs</DependentUpon>
+    <EmbeddedResource Include="AddNewWordWindow.resx">
+      <DependentUpon>AddNewWordWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateOrEditTestWindow.resx">
+      <DependentUpon>CreateOrEditTestWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
@@ -93,6 +102,7 @@
     <Content Include="icon.ico" />
     <Content Include="minus.png" />
     <Content Include="plus.png" />
+    <Content Include="save.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
