--- a/LinguaTest/LinguaTest.csproj
+++ b/LinguaTest/LinguaTest.csproj
@@ -68,6 +68,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TakeTestWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TakeTestWindow.Designer.cs">
+      <DependentUpon>TakeTestWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils.cs" />
     <Compile Include="WordObject.cs" />
     <EmbeddedResource Include="AddNewWordWindow.resx">
@@ -88,6 +94,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TakeTestWindow.resx">
+      <DependentUpon>TakeTestWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
