--- a/LinguaTest/LinguaTest.csproj
+++ b/LinguaTest/LinguaTest.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CreateOrEditTestWindow.Designer.cs">
       <DependentUpon>CreateOrEditTestWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataGridViewRichTextBoxColumn.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResultForm.Designer.cs">
+      <DependentUpon>ResultForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RichTextBoxPrinter.cs" />
     <Compile Include="TakeTestWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +102,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ResultForm.resx">
+      <DependentUpon>ResultForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TakeTestWindow.resx">
       <DependentUpon>TakeTestWindow.cs</DependentUpon>
     </EmbeddedResource>
