The TakeTestForm.cs module has been fully rewritten

--- a/LinguaTest/LinguaTest.csproj
+++ b/LinguaTest/LinguaTest.csproj
@@ -82,6 +82,7 @@
     <Compile Include="TakeTestWindow.Designer.cs">
       <DependentUpon>TakeTestWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserAnswer.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="WordObject.cs" />
     <EmbeddedResource Include="AddNewWordWindow.resx">
