Little changes in user interface

--- a/LinguaTest/LinguaTest.csproj
+++ b/LinguaTest/LinguaTest.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>ResultForm.cs</DependentUpon>
     </Compile>
     <Compile Include="RichTextBoxPrinter.cs" />
+    <Compile Include="SystemMenu.cs" />
     <Compile Include="TakeTestWindow.cs">
       <SubType>Form</SubType>
     </Compile>
